option('install_libs', type: 'combo', choices: ['yes', 'no', 'not_subproject'], value: 'not_subproject')
option('install_headers', type: 'combo', choices: ['yes', 'no', 'not_subproject'], value: 'not_subproject')
option('build_tests', type: 'combo', choices: ['yes', 'no', 'not_subproject'], value: 'not_subproject')
